# nettoolskit-copilot

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  copilot-instructions.md  deny.toml  instruction-routing.catalog.yml
.cargo/: config.toml
crates/commands/runtime/: Cargo.toml  README.md
crates/commands/runtime/src/: apply_vscode_templates.rs  bootstrap.rs  contracts.rs  error.rs  healthcheck.rs  lib.rs  local_context.rs  planning_summary.rs  self_heal.rs
crates/commands/runtime/src/continuity/: local_context.rs  mod.rs  planning_summary.rs
crates/commands/runtime/src/diagnostics/: doctor.rs  enterprise_trends.rs  healthcheck.rs  mod.rs  self_heal.rs
crates/commands/runtime/src/hooks/: eof_settings.rs  mod.rs  pre_commit_eof_hygiene.rs  pre_tool_use.rs  setup_git_hooks.rs  setup_global_git_aliases.rs
crates/commands/runtime/src/maintenance/: clean_build_artifacts.rs  fix_region_spacing.rs  fix_version_ranges.rs  mod.rs  trim_trailing_blank_lines.rs
crates/commands/runtime/src/sync/: apply_vscode_templates.rs  bootstrap.rs  mcp_catalog.rs  mcp_config.rs  mcp_runtime_artifacts.rs  mod.rs  provider_surfaces.rs
crates/commands/runtime/tests/: bootstrap_tests.rs  contracts_tests.rs  doctor_tests.rs  error_tests.rs  healthcheck_tests.rs  local_context_tests.rs  planning_summary_tests.rs  self_heal_tests.rs  test_suite.rs
crates/commands/runtime/tests/continuity/: local_context_tests.rs  mod.rs  planning_summary_tests.rs
crates/commands/runtime/tests/diagnostics/: doctor_tests.rs  enterprise_trends_tests.rs  healthcheck_tests.rs  mod.rs  self_heal_tests.rs
crates/commands/runtime/tests/hooks/: mod.rs  pre_commit_eof_hygiene_tests.rs  pre_tool_use_tests.rs  setup_git_hooks_tests.rs  setup_global_git_aliases_tests.rs
crates/commands/runtime/tests/maintenance/: clean_build_artifacts_tests.rs  fix_region_spacing_tests.rs  fix_version_ranges_tests.rs  mod.rs  trim_trailing_blank_lines_tests.rs
crates/commands/runtime/tests/sync/: apply_vscode_templates_tests.rs  bootstrap_tests.rs  mcp_config_tests.rs  mcp_runtime_artifacts_tests.rs  mod.rs  provider_surface_test_support.rs  provider_surfaces_tests.rs
crates/commands/validation/: Cargo.toml  README.md
crates/commands/validation/src/: contracts.rs  error.rs  lib.rs
crates/commands/validation/src/agent_orchestration/: agent_hooks.rs  agent_orchestration.rs  agent_permissions.rs  agent_skill_alignment.rs  common.rs  mod.rs  orchestration_integrity.rs
crates/commands/validation/src/architecture/: architecture_boundaries.rs  mod.rs
crates/commands/validation/src/deploy/: deploy_preflight.rs  mod.rs
crates/commands/validation/src/documentation/: instruction_metadata.rs  mod.rs  readme_standards.rs  xml_documentation.rs
crates/commands/validation/src/evidence/: audit_ledger.rs  mod.rs
crates/commands/validation/src/governance/: mod.rs  routing_coverage.rs  template_standards.rs
crates/commands/validation/src/instruction_graph/: authoritative_source_policy.rs  instruction_architecture.rs  instructions.rs  mod.rs
crates/commands/validation/src/operational_hygiene/: common.rs  mod.rs  refactor_tests_to_aaa.rs  runtime_script_tests.rs  shell_hooks.rs  test_naming.rs  warning_baseline.rs
crates/commands/validation/src/orchestration/: mod.rs  profiles.rs  validate_all.rs
crates/commands/validation/src/policy/: compatibility_lifecycle_policy.rs  mod.rs  repository_policy.rs
crates/commands/validation/src/release/: common.rs  mod.rs  release_governance.rs  release_provenance.rs
crates/commands/validation/src/security/: mod.rs  security_baseline.rs  shared_script_checksums.rs  supply_chain.rs
crates/commands/validation/src/standards/: dotnet_standards.rs  mod.rs  powershell_standards.rs
crates/commands/validation/src/structure/: mod.rs  planning_structure.rs
crates/commands/validation/src/workspace/: mod.rs  workspace_efficiency.rs
crates/commands/validation/tests/: contracts_tests.rs  error_tests.rs  test_suite.rs
crates/commands/validation/tests/agent_orchestration/: agent_hooks_tests.rs  agent_orchestration_tests.rs  agent_permissions_tests.rs  agent_skill_alignment_tests.rs  mod.rs
crates/commands/validation/tests/architecture/: architecture_boundaries_tests.rs  mod.rs
crates/commands/validation/tests/deploy/: deploy_preflight_tests.rs  mod.rs
crates/commands/validation/tests/documentation/: instruction_metadata_tests.rs  mod.rs  readme_standards_tests.rs  xml_documentation_tests.rs
crates/commands/validation/tests/evidence/: audit_ledger_tests.rs  mod.rs
crates/commands/validation/tests/governance/: mod.rs  routing_coverage_tests.rs  template_standards_tests.rs
crates/commands/validation/tests/instruction_graph/: authoritative_source_policy_tests.rs  instruction_architecture_tests.rs  instructions_tests.rs  mod.rs
crates/commands/validation/tests/operational_hygiene/: mod.rs  refactor_tests_to_aaa_tests.rs  runtime_script_tests_tests.rs  shell_hooks_tests.rs  test_naming_tests.rs  warning_baseline_tests.rs
crates/commands/validation/tests/orchestration/: mod.rs  validate_all_tests.rs
crates/commands/validation/tests/policy/: compatibility_lifecycle_policy_tests.rs  mod.rs  policy_tests.rs
crates/commands/validation/tests/release/: release_governance_tests.rs  release_provenance_tests.rs
crates/commands/validation/tests/security/: mod.rs  security_baseline_tests.rs  shared_script_checksums_tests.rs  supply_chain_tests.rs
crates/commands/validation/tests/standards/: dotnet_standards_tests.rs  mod.rs  powershell_standards_tests.rs
crates/commands/validation/tests/structure/: mod.rs  planning_structure_tests.rs
crates/commands/validation/tests/support/: agent_orchestration_fixtures.rs  architecture_fixtures.rs  deploy_fixtures.rs  instruction_graph_fixtures.rs  mod.rs  operational_hygiene_fixtures.rs  policy_fixtures.rs  release_fixtures.rs  security_fixtures.rs  standards_fixtures.rs  test_naming_fixtures.rs
crates/commands/validation/tests/workspace/: mod.rs  workspace_efficiency_tests.rs
(+1523 files in other folders)
