[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/ui",
    "crates/otel",
    "crates/orchestrator",
    "crates/task-worker",
    "crates/commands",
    "crates/commands/templating",
    "crates/commands/manifest",
    "crates/commands/help",
    "crates/commands/runtime",
    "crates/commands/validation",
    "benchmarks",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["NetToolsKit Team"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.31", features = ["bundled"] }
roxmltree = "0.21"

# Terminal dependencies
crossterm = "0.29"

# String manipulation
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.28"
heck = "0.5"

# Color support
owo-colors = "4.3"
supports-color = "3.0"

# Interactive prompts
inquire = "0.9"
rustyline = "18.0"

# Async utilities
futures = "0.3"
futures-util = "0.3"
regex = "1.12"
fancy-regex = "0.14"
pulldown-cmark = "0.13"
arboard = "3.4"
axum = "0.8"
tower = "0.5"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-c-sharp = "0.23.0"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23.0"

# Tracing/observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["trace", "metrics", "grpc-tonic", "http-proto"] }

# Configuration
toml = "1.1"

# File system
walkdir = "2.4"
ignore = "0.4"
globset = "0.4"
sha2 = "0.11"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
ed25519-dalek = "2.1"
hex = "0.4"

# Template engine
handlebars = "6.4"

# Testing
serial_test = "3.2"
insta = "1.47"
assert_cmd = "2.2"
predicates = "3.1"
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.27"
serde_yaml = "0.9"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Keep pedantic/nursery/cargo as opt-in signals for local improvement work.
# CI quality gate should focus on broadly actionable `clippy::all` findings.
pedantic = "allow"
nursery = "allow"
cargo = "allow"
cargo_common_metadata = "allow"

# Feature flags for incremental TUI improvements
[workspace.metadata.features]
description = """
Feature flags control opt-in TUI improvements:
- modern-tui: New Ratatui-based TUI (experimental)
- event-driven: Event loop architecture (requires modern-tui)
- frame-scheduler: Frame coalescing optimization (requires modern-tui)
- persistent-sessions: Save/load sessions (experimental)

Default: Standard UI (stable)
"""
