[package]
name = "nettoolskit-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Runtime migration command contracts for NetToolsKit"
repository = "https://github.com/ThiagoGuislotti/NetToolsKit"
readme = "README.md"
keywords = ["runtime", "commands", "migration"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "nettoolskit_runtime"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true