[package]
name = "nettoolskit-validation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Validation migration command contracts for NetToolsKit"
repository = "https://github.com/ThiagoGuislotti/NetToolsKit"
readme = "README.md"
keywords = ["validation", "commands", "migration"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "nettoolskit_validation"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
nettoolskit-core = { path = "../../core" }
globset = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true